--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
             
        </div>
     </div>
+    <br/>
+    <hr>
+    <div class="footer">
+      <a href="https://github.com/zahra-veisi/my-home-work">coded by</a>ZAHRA
+    </div>
     <script src=app.js></script>
   </body>
 </html>
