--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <br/>
     <hr>
     <div class="footer">
-      <a href="https://github.com/zahra-veisi/my-home-work">coded by</a>ZAHRA
+      <a href="https://github.com/zahra-veisi/my-home-work">Coded by</a>  ZAHRA
     </div>
     <script src=app.js></script>
   </body>
