--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>app</title>
+    <title> Weather app</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -128,6 +128,6 @@
     <div class="footer">
       <a href="https://github.com/zahra-veisi/my-home-work">Coded by</a>  ZAHRA
     </div>
-    <script src=app.js></script>
+    <script src="app.js"></script>
   </body>
 </html>
