--- a/index.html
+++ b/index.html
@@ -67,13 +67,12 @@
           <div class="col-6 mb-3 mb-sm-0">
             <div class="card">
               <div class="card-body">
-                <div class="card-title">Precipitation</div><span id="description"></span>
+                <h5 class="card-title">Precipitation</h5><span id="description"></span>
                 <span id="humidity"class="card-text"> </span> %<br/>
                 <span class="wind">Wind</span> <span id="wind"></span> km/h
                 <br/>
-                <i class="fa-solid fa-cloud-rain fa-beat"></i></div></p>
-                
-                <a href="https://zoom.earth/maps/satellite/#view=34.273,46.7592,8.09z" class="btn btn-primary">Satellite Image</a>
+                <i class="fa-solid fa-cloud-rain fa-beat"></i></div><br/> 
+                <a href="https://zoom.earth/maps/satellite/#view=34.273,46.7592,8.09z" class="btn btn-primary w-75">Satellite Image</a></p>
               </div>
             </div>
           </div>
