--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     </h5>
                 <br/>
                 <span id="temperature" class="unit" > </span><a href="" id="celsius-link">°C</a> |
-                    <a href="" id="fahrenheit-link">°F</a><br/><br/>
-                  <i class="fa-solid fa-cloud-sun fa-beat"></i><p>
+                    <a href="" id="fahrenheit-link">°F</a>
+                    <img src="" alt="Clear" id="icon" class="float-left" /><p>
                 <a href="https://zoom.earth/maps/satellite/#view=34.273,46.7592,8.09z" class="btn btn-primary">Satellite Image</a>
               </div>
             </div>
@@ -67,11 +67,14 @@
           <div class="col-6 mb-3 mb-sm-0">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Precipitation</h5><span id="description"></span>
-                <span id="humidity"class="card-text"> </span> %<br/>
-                <span class="wind">Wind</span> <span id="wind"></span> km/h
+                <h5 class="card-title">Precipitation</h5>
+                <span id="description"></span>
+                <span id="humidity"class="card-text"> </span> %<br/><br/>
+                <span class="wind">Wind</span>
+                <span id="wind"></span> km/h
                 <br/>
-                <i class="fa-solid fa-cloud-rain fa-beat"></i></div><br/> 
+                <br/>
+               <br/>
                 <a href="https://zoom.earth/maps/satellite/#view=34.273,46.7592,8.09z" class="btn btn-primary w-75">Satellite Image</a></p>
               </div>
             </div>
@@ -129,7 +132,7 @@
     <br/>
     <hr>
     <div class="footer">
-      <a href="https://github.com/zahra-veisi/my-home-work">Coded by</a>  ZAHRA
+      <a href="https://github.com/zahra-veisi/my-home-work">Open Source Code by</a>  ZAHRA
     </div>
     <script src="app.js"></script>
   </body>
