--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h5   class="card-title">Temperature
                     </h5>
                 <br/>
-                <span id="temperature" class="unit" > </span><a href="" id="celsius-link">°C</a> |
+                <span id="temperature" class="unit" > </span><a href="" id="celsius-link" class="active">°C</a> |
                     <a href="" id="fahrenheit-link">°F</a>
                     <img src="" alt="Clear" id="icon" class="float-left" /><p>
                 <a href="https://zoom.earth/maps/satellite/#view=34.273,46.7592,8.09z" class="btn btn-primary">Satellite Image</a>
